fixed overflow problem on windows

--- a/css/master.css
+++ b/css/master.css
@@ -660,7 +660,7 @@ h1 {
 
 #sec-content {
 	padding: 0 10px;
-	width: 240px;
+	width: 250px;
 	float: right;
 }
 
